# mcs_backend

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  clear_chats.py  implementation-plan.md  pyproject.toml  requirements.txt  test_e2e.py  test_vercel_sim.py  to run the backend.txt  vercel.json
api/: index.py
app/: config.py  deps.py  main.py
app/api/: attachments.py  branches.py  chat.py  graph.py  health.py  models_catalog.py  nodes.py  pairs.py  projects.py  settings.py  summaries.py
app/db/: models.py  session.py
app/domain/: attachments.py  lineage.py  nodes.py  summaries.py  tokens.py
app/providers/: base.py  capability_table.py  claude_provider.py  exceptions.py  fireworks.py  gemini.py  gemini_files.py  thinking_map.py
app/schemas/: attachment.py  branch.py  chat.py  global_settings.py  graph.py  lineage.py  node.py  pair.py  project.py  summary.py
doc/: AGENT-LOG.md
docs/: API-CONTRACT.md  BACKEND-ULTIMATE.md  EAGLE-VIEW-GRAPH-FRONTEND-SPEC.md  MCS-BACKEND-CONSOLIDATED-SPEC.md  filetree.md
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py
tests/api/: test_attachments.py  test_branches.py  test_cascade_deletes.py  test_graph.py  test_health.py  test_nodes.py  test_projects.py  test_streaming.py  test_summaries.py  test_temporary_branches.py
tests/domain/: test_byok_header.py  test_gemini_files.py  test_gemini_provider.py  test_lineage.py  test_lineage_temporary.py  test_nodes.py  test_summaries.py  test_thinking_map.py  test_tokens.py
